2008-09-16  Derek Price  <derek@ximbiot.com>

	* lib/system.h: Remove signal detection.
	* lib/sighandle.c: Assume POSIX signal semantics via GNULIB.

2008-09-15  Derek Price  <derek@ximbiot.com>

	* .cvsignore: Ignore generated files.

	Update from GNULIB.
	* Makefile.am: Manually import changes from...
	* Makefile.gnulib: ...this file regenerated by gnulib-tool.
	* __fpending.c, __fpending.h, alloca_.h, mreadlink-with-size.c,
	mreadlink.h, dirent_.h, fcntl_.h, float_.h, fnmatch_.h, getopt_.h,
	glob_.h, inttypes_.h, netinet_in_.h, stdbool_.h, stdint_.h, stdio_.h,
	stdlib_.h, string_.h, sys_socket_.h, sys_stat_.h, sys_time_.h,
	time_.h, unistd_.h, wchar_.h, wctype_.h: Renamed to...
	* fpending.c, fpending.hi, alloca.in.h, areadlink-with-size.c,
	areadlink.h, dirent.in.h, fcntl.in.h, float.in.h, fnmatch.in.h,
	getopt.in.h, glob.in.h, inttypes.in.h, netinet_in.in.h, stdbool.in.h,
	stdint.in.h, stdio.in.h, stdlib.in.h, string.in.h, sys_socket.in.h,
	sys_stat.in.h, sys_time.in.h, time.in.h, unistd.in.h, wchar.in.h,
	wctype.in.h: ...these new names.
	* arpa_inet.in.h, c-ctype.c, c-ctype.h, errno.in.h, file-set.c,
	file-set.h, fpending.c, fpending.h, freadahead.c, freadahead.h,
	freadptr.c, freadptr.h, freadseek.c, freadseek.h, getpagesize.c,
	hash-pjw.c, hash-pjw.h, hash-triple.c, hash-triple.h, hash.c, hash.h,
	memchr2.c, memchr2.h, open.c, same.c, same.h, sig-handler.h,
	sigaction.c, signal.in.h, sigprocmask.c, stdio-impl.h, strings.in.h,
	str-kmp.h, sys_select.in.h: New files from GNULIB.
	* cycle-check.c, cycle-check.h, dev-ino.h, getpagesize.h, inet_ntop.h,
	setenv.h: Removed.
	* alloca.c, asnprintf.c, asprintf.c, at-func.c, base64.c, base64.h,
	basename.c, canon-host.c, canon-host.h, canonicalize-lgpl.c,
	canonicalize.c, canonicalize.h, chdir-long.c, chdir-long.h, chown.c,
	close-stream.c, closeout.c, closeout.h, config.charset, creat-safer.c,
	dirchownmod.c, dirfd.c, dirfd.h, dirname.c, dirname.h, dup-safer.c,