@@ -1,3 +1,8 @@
+2008-11-14  Larry Jones  <lawrence.jones@siemens.com>
+
+	* sunos57-select.c: Replace obsolete "xtime.h" with <sys/time.h>.
+	* test-getdate.sh (valid_timezone): Fix incorrect return values.
+
 2008-09-16  Derek Price  <derek@ximbiot.com>
 
 	* lib/system.h: Remove signal detection.
